# hive-metastore-clients

./: .editorconfig  .gitignore  README.md
hack/: compose.yaml
python/: .gitignore  README.md  pyproject.toml
python/hive_metastore/thrift/: __init__.py  arrow.py
thrift/: hive_metastore.thrift  namespace.patch
thrift/share/fb303/if/: fb303.thrift
